# RAG-AppRAG-Based-PDF-Question-Answering-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements
app/: main.py
app/routes/: document.py
app/services/: chunk_service.py  embedding_service.py  llm_service.py  pdf_service.py  retrieval_service.py  vector_store_service.py
